--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"firebase": "^9.6.8",
+		"localforage": "^1.10.0",
 		"next": "12.1.0",
 		"next-pwa": "^5.4.4",
 		"next-themes": "^0.1.1",
